// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseListItem Component: Should render ExpenseListItem with expense 1 1`] = `
<Link
  className="expense-list-item"
  to="/edit/1"
>
  <div>
    <p
      className="expense-list-item__title expense-list-item--bold"
    >
      Water bill
    </p>
    <p
      className="expense-list-item__subtitle"
    >
      January 1st, 1970
    </p>
  </div>
  <p
    className="expense-list-item__data expense-list-item--bold"
  >
    $4,500.00
  </p>
</Link>
`;

exports[`ExpenseListItem Component: Should render ExpenseListItem with expense 2 1`] = `
<Link
  className="expense-list-item"
  to="/edit/2"
>
  <div>
    <p
      className="expense-list-item__title expense-list-item--bold"
    >
      Rent
    </p>
    <p
      className="expense-list-item__subtitle"
    >
      December 28th, 1969
    </p>
  </div>
  <p
    className="expense-list-item__data expense-list-item--bold"
  >
    $2,500.00
  </p>
</Link>
`;
